[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameController.gd" type="Script" id=1]
[ext_resource path="res://square.png" type="Texture" id=2]
[ext_resource path="res://BGParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://InputAreaSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://PowerSwitcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://InputArea.gd" type="Script" id=7]
[ext_resource path="res://LeftPath.gd" type="Script" id=8]
[ext_resource path="res://vignette.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 9.84135, 10 )

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -302.622, 130.904, 0, 0, 0, 0, -128.032, 176.31, 0, 0, 22.5846, 2.86789, -24.7325, 185.533, -13.9119, -4.48418, 16.2896, 3.42404, 29.0256, 196.864, -14.4748, -5.6834, 10.6648, 5.92796, 66.9724, 208.986, -11.9431, -6.80115, 16.0879, 9.22247, 98.0678, 224.534, -11.1956, -12.1, 8.69543, 9.07283, 132.062, 249.568, -10.0469, -18.2891, 6.1706, 14.1154, 157.096, 285.671, -4.28515, -14.2891, 5.95594, 17.7516, 173, 327, -2.78562, -10.7397, 3.69314, 15.1114, 184.035, 365.126, -2.23319, -13.0675, 1.9412, 19.0885, 192.397, 401.216, -1.3176, -15.0206, 1.3176, 12.649, 195.918, 437.307, -0.52704, -19.5005, 0.79056, 24.7709, 198, 512, 0, 0, 0, 0, 200, 563, 0, 0, 0, 0, 200.457, 637.365, 0, 0, 0, 0, 201.36, 696.027, 0, 0, 0, 0, 201.36, 764.617, 0, 0, 0, 0, 207.677, 848.55 )
}

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )
speed = 2.0
maxSpeed = 12.0
spawnDelay = 2.0
minSpawnDelay = 0.5
startSpawnDelay = 2.0
waves = 3
waveCount = 10
initialWaveSpeed = 0.008

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.0772552, 0.272125, 0.324219, 1 )
position = Vector2( 391.938, 292.023 )
scale = Vector2( 7.12403, 5.56286 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="BGParticles" parent="." index="1" instance=ExtResource( 3 )]

[node name="Player" type="Node" parent="." index="2"]

script = ExtResource( 4 )

[node name="InputAreaSprite" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 609.448, 501.978 )

[node name="PowerSwitcher" parent="." index="4" instance=ExtResource( 6 )]

initOut = false

[node name="InputArea" type="Area2D" parent="." index="5"]

position = Vector2( 375.671, 493.354 )
scale = Vector2( 5.08015, 1.88367 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea" index="0"]

scale = Vector2( 1, 2 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="LeftPath" type="Path2D" parent="." index="6"]

position = Vector2( -31, -2 )
curve = SubResource( 2 )
script = ExtResource( 8 )

[node name="Control" type="Control" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="vignette" parent="Control" index="0" instance=ExtResource( 9 )]

[node name="WaveText" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 300.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "WaveText
"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect" ]
__meta__ = {
"_edit_lock_": true
}


